--- a/building_user_login_system/finish/templates/show_all.html
+++ b/building_user_login_system/finish/templates/show_all.html
@@ -58,7 +58,7 @@
           <td>{{row.quantity}}</td>
           <td>{{row.total}}</td>
 
-          <td><a href='#' class='btn btn-primary'>Edit</a></td>
+          <td><a href='{{url_for("edit",id=row.id)}}' class='btn btn-primary'>Edit</a></td>
           <td><a href='{{url_for("delete",id=row.id)}}' class='btn btn-danger' onclick='return confirm("Are You Sure")'>Delete</a></td>   
       
         </tr>
