--- a/building_user_login_system/finish/templates/show_all.html
+++ b/building_user_login_system/finish/templates/show_all.html
@@ -38,7 +38,7 @@
 {% extends 'layout.html' %}
 {% block body %}
   <h3 class='text-center text-muted mb-3'>Nithin Store</h3>
-  <p class='text-right'><a href='{{url_for("show_all")}}' class='btn btn-success '>+Add items</a></p>
+  <p class='text-right'><a href='{{url_for("add_item")}}' class='btn btn-success '>+Add items</a></p>
   <table class='table table-bordered'>
     <thead>
       <th>S.No</th>
