--- a/building_user_login_system/finish/templates/index.html
+++ b/building_user_login_system/finish/templates/index.html
@@ -26,6 +26,7 @@
             <li class="active"><a href="#">Home</a></li>
             <li><a href="{{ url_for('login') }}">Login</a></li>
             <li><a href="{{ url_for('signup') }}">Sign Up</a></li>
+            <li><a href="{{ url_for('logout') }}">logout</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
